feat:基础页面的搭建

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <meta name="description" content="向阳而生 - 大学生心理健康陪伴平台，温暖、不说教、不尴尬的心理健康自助与互助平台" />
+    <meta name="keywords" content="心理健康,大学生,情绪记录,心理自助,社区互助" />
+    <title>向阳而生 - 大学生心理健康陪伴平台</title>
   </head>
   <body>
     <div id="app"></div>
